--- a/app/src/main/res/drawable/ic_delivery_scooter.xml
+++ b/app/src/main/res/drawable/ic_delivery_scooter.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="@color/BlinkITClone_yellow"
+        android:pathData="M19,13H5a2,2 0,0 1,-2 -2V5a2,2 0,0 1,2 -2h14v10M19,13a2,2 0,1 0,0 4,2 2,0 0,0 0,-4m-12,0a2,2 0,1 0,0 4,2 2,0 0,0 0,-4m-2,5h1v-2H5v2m12,0h1v-2h-1v2m-8,-13v3h10V5H9z"/>
+</vector>
