--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:layout_width="366dp"
         android:layout_height="223dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/VPR_Fresh"
+        android:src="@drawable/vpr_fresh"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
