--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,8 +8,9 @@
         android:id="@+id/nav_categories"
         android:icon="@drawable/ic_categories"
         android:title="Categories" />
+    <!-- THIS IS THE UPDATED ITEM -->
     <item
-        android:id="@+id/nav_orders"
-        android:icon="@drawable/ic_orders"
-        android:title="Order Again" />
+        android:id="@+id/nav_cart"
+        android:icon="@drawable/ic_cart"
+        android:title="Cart" />
 </menu>
