--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
             android:id="@+id/delivery_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Blinkit in 11 minutes"
+            android:text="@string/home_delivery_time"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="18sp"/>
@@ -28,8 +28,8 @@
             android:id="@+id/user_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Srinivasa Nagar, Singasandra"
-            android:drawableEnd="@drawable/ic_arrow_down"
+            android:text="@string/home_user_location"
+            app:drawableEndCompat="@drawable/ic_arrow_down"
             android:drawablePadding="4dp"
             android:layout_below="@id/delivery_time"
             android:textColor="#555555"/>
@@ -40,7 +40,8 @@
             android:layout_height="32dp"
             android:src="@drawable/ic_profile"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/profile_title"/>
     </RelativeLayout>
 
 
@@ -61,9 +62,10 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search for products..."/>
+            android:hint="@string/home_search_hint"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <!-- Category Tabs -->
     <com.google.android.material.tabs.TabLayout
@@ -77,7 +79,7 @@
         app:tabTextColor="#777777"
         app:tabSelectedTextColor="@color/black"/>
 
-    <!-- Your existing product grid will go here -->
+    <!-- Product Grid -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/product_recycler_view"
         android:layout_width="match_parent"
