--- a/app/src/main/res/layout/list_item_product.xml
+++ b/app/src/main/res/layout/list_item_product.xml
@@ -56,7 +56,7 @@
                 tools:text="₹100" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/add_to_cart_button"
+                android:id="@+id/add_button"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
