--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -72,23 +72,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:importantForAutofill="no" />
 
+    <!-- ID CHANGED HERE -->
+
     <EditText
         android:id="@+id/password_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginTop="16dp"
-        android:hint="Password"
-        android:inputType="textPassword"
         android:background="@drawable/login_input_background"
+        android:hint="Password"
+        android:importantForAutofill="no"
+        android:inputType="textPassword"
         android:padding="14dp"
-        app:layout_constraintTop_toBottomOf="@id/email_input"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:importantForAutofill="no" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/email_input" />
 
-    <!-- ID CHANGED HERE -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/continue_button"
         android:layout_width="0dp"
